# turbines-challenge

./: .gitignore  Makefile  README.md  pyproject.toml
data/raw_missing/: data_group_1.csv  data_group_2.csv  data_group_3.csv
docs/: approach.md
turbines/pipelines/: bronze.py  gold.py  silver.py
turbines/utils/: utils.py
