[project]
name = "turbines-challenge"
version = "0.1.0"
description = ""
authors = [
    {name = "kl-data-eng",email = "kate@lodgemail.co.uk"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "pyspark (==3.5.1)",
    "delta-spark (<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

